--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,26 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.game-box{
+  height: 7rem;
+  width: 7rem;
+  border: 1px solid black;
+  font-size: 7rem;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  cursor: pointer;
 }
-
-.App-link {
-  color: #61dafb;
+.game-box:hover{
+  background-color: rgba(0, 0, 0, 233);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.board{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  width:min-content;
+  background-color: crimson;
+}
+body{
+  margin:20px;
+  
 }
